# chess-v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  main  main.cpp  r.sh
backend/board/: Board.cpp  Board.h
backend/game/: Game.cpp  Game.h
backend/pieces/: Piece.h
board/: Board.cpp  Board.h  board.cpp  board.h
frame/: frame.cpp  frame.h
frontend/: board.py  main.py
pieces/: piece.cpp  piece.h
pieces/bishop/: bishop.cpp  bishop.h
pieces/king/: king.cpp  king.h
pieces/knight/: knight.cpp  knight.h
pieces/pawn/: pawn.cpp  pawn.h
pieces/queen/: queen.cpp  queen.h
pieces/rook/: rook.cpp  rook.h
src/: main.cpp
src/board/: board.cpp  board.h
src/bot/: bot.cpp  bot.h
src/frame/: frame.cpp  frame.h
src/pieces/: piece.h
src/pieces/bishop/: bishop.h
src/pieces/king/: king.h
src/pieces/knight/: knight.cpp
src/pieces/pawn/: pawn.h
src/pieces/queen/: queen.cpp  queen.h
